@startuml states-driver

skinparam monochrome true
title Driver states

[*] --> IDLE
IDLE --> ACCEPTED
IDLE --> REJECTED

ACCEPTED --> PICKING_UP_GOODS
ACCEPTED --> DRIVER_CANCELLED

PICKING_UP_GOODS --> ARRIVED_TO_ORIGIN
PICKING_UP_GOODS --> DRIVER_CANCELLED

ARRIVED_TO_ORIGIN --> DELIVERING
ARRIVED_TO_ORIGIN --> DRIVER_CANCELLED

DELIVERING --> DELIVERED
DELIVERING --> DRIVER_CANCELLED

DELIVERED --> IDLE

DRIVER_CANCELLED --> IDLE

REJECTED --> IDLE

@enduml